--- a/routes_form/templates/routes_form/route_form.html
+++ b/routes_form/templates/routes_form/route_form.html
@@ -5,3 +5,8 @@
 
 {% include 'routes_form/partials/_form.html' %}
 {% endblock %}
+
+{% block script %}
+<script src="{% static 'routes_form/add_map.js' %}"></script>
+<!-- <script src="{% static 'routes_form/styling_map.js' %}"></script> -->
+{% endblock %}
