--- a/routes_form/templates/routes_form/base.html
+++ b/routes_form/templates/routes_form/base.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'routes_form/style3.css' %}">
+    <link rel="shortcut icon" href="{%static 'routes_form/image/favicon.ico'%}" type="image/x-icon">
     
+    <link rel="stylesheet" href="{% static 'routes_form/style3.css' %}">
+
+    <script src="https://code.jquery.com/jquery-3.6.3.js"
+        integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js'></script>
+
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js'></script>
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.css'
@@ -16,39 +22,30 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
 
-        #map {
-            position: absolute;
-            top: 40px;
-            bottom: 0;
-            right: 0;
-            width: 75%;
-        }
-    </style> -->
-    
     <title>Hiking around</title>
 </head>
 
 <body>
-    <!-- for control -->
-
-    <!-- for directions -->
-
     {% include 'routes_form/partials/_navbar.html' %}
     <div class="container-fluid">
         <div class="row">
-            {% block content %} {% endblock %}
-            {% include 'routes_form/partials/_map.html' %}
+            <div id="map" class="">
+                <div id="left" class="sidebar flex-center left collapsed">
+                    <div class="sidebar-content rounded-rect flex-center d-flex flex-column flex-shrink-0 p-3 bg-light">
+                        {% block content_form %} {% endblock %}
+                        <div class="sidebar-toggle rounded-rect left" onclick="toggleSidebar('left')">
+                            &rarr;
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    {% block script %} {% endblock %}
 </body>
 
 </html>
