--- a/routes_form/templates/routes_form/partials/_map.html
+++ b/routes_form/templates/routes_form/partials/_map.html
@@ -1,13 +1,7 @@
-{% load static %}
-
-<!-- <style>
-    .mapboxgl-popup {
-        max-width: 400px;
-        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    }
-</style> -->
-
-
-<div id="map" class="col-md-9 ms-sm-auto col-lg-9 px-md-4"></div>
-
-<script src="{% static 'routes_form/add_map.js' %}"></script>
+<div id="map" class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
+    <div id="left" class="sidebar flex-center left collapsed">
+        <div class="sidebar-content rounded-rect flex-center d-flex flex-column flex-shrink-0 p-3 bg-light">
+            {%block navbar%} {%endblock%}
+        </div>
+    </div>
+</div>
